PUT match key config MODSI-28 (#14)
New service, so changes to the ModuleDescriptor
